PROJECT(SFML.Console)

SET(SFML_CONSOLE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(SFML_CONSOLE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(SFML.Console
        Source/Backend/SFML/SFML.cpp
        Source/Console.cpp)

SET_TARGET_PROPERTIES(SFML.Console PROPERTIES CXX_STANDARD 17)
TARGET_INCLUDE_DIRECTORIES(SFML.Console PUBLIC $<BUILD_INTERFACE:${SFML_CONSOLE_SOURCE_DIR}/Include/>)